--- a/templates/user.html
+++ b/templates/user.html
@@ -160,11 +160,10 @@
             let temp_html = `<div class="col">
                                 <div class="card h-100" id="card-${post['idx']}">
                                     <!--사진 수정-->
-                                    <img src="" class="card-img-top" onclick="location.href='/posts/${post['idx']}'">
+                                    <img src="/static/post_pic/${post['file']}" class="card-img-top image" onclick="location.href='/posts/${post['idx']}'">
                                     <div class="card-body">
                                         <h5 class="card-title" onclick="location.href='/posts/${post['idx']}'">${post['title']}</h5>
                                         <p class="card-text" style="font-weight: bold;">${post['price']}원</p>
-<!--                                        동으로 뜨면 좋을듯-->
                                         <p class="address-text">${post['address']}</p>
                                         <p class="card-text small-text">관심 ${post['like_count']}</p>
                                     </div>
