--- a/templates/posting.html
+++ b/templates/posting.html
@@ -47,10 +47,10 @@
 <body>
 {#상단 배너#}
 <div>
-    <section class="hero" onclick="window.location.href='/'" style="width: 400px;height: 50px; cursor: pointer; ">
+    <section class="hero" onclick="window.location.href='/'" style="width: 250px;height: 50px; cursor: pointer; ">
         <div class="hero-body">
             <img class="hero-img" src="/static/gogumacat.png">
-            <span class="title hero-font">고구마캣</span>
+            <span class="title hero-font" style="vertical-align: 26px">고구마캣</span>
         </div>
     </section>
     <section>
