--- a/templates/index.html
+++ b/templates/index.html
@@ -196,16 +196,8 @@
         function pagination(last_page_num, page, type) {
             $("#pagination-list").empty()
 
-            if (page == 1) {
-                $("#pre-btn").addClass("is-hidden")
-            } else {
-                $("#pre-btn").removeClass("is-hidden")
-            }
-
-            if (page == last_page_num) {
-                $("#next-btn").addClass("is-hidden")
-            } else {
-                $("#next-btn").removeClass("is-hidden")
+            if (last_page_num == 1) {
+                $("#page-box").addClass("is-hidden")
             }
 
             let temp_html = ""
@@ -227,6 +219,8 @@
                 } else {
                     if (type == "search") {
                         temp_html += `<li><a class="pagination-link" onclick="searching(order,${i})">${i}</a></li>`
+                    } else if (type == "address") {
+                        temp_html += `<li><a class="pagination-link" onclick="search_by_address(order,${i})">${i}</a></li>`
                     } else {
                         temp_html += `<li><a class="pagination-link" onclick="listing(order,${i})">${i}</a></li>`
                     }
@@ -237,25 +231,11 @@
             $("#pagination-list").append(temp_html)
         }
 
-        function click_pre_btn() {
-            if ($("#query-text-box").hasClass("is-hidden")) {
-                listing(order, page - 1)
-            } else {
-                searching(order, page - 1)
-            }
-        }
-
-        function click_next_btn() {
-            if ($("#query-text-box").hasClass("is-hidden")) {
-                listing(order, page + 1)
-            } else {
-                searching(order, page + 1)
-            }
-        }
-
         function click_sort_btn(order_type, page) {
-            if ($("#query-text-box").hasClass("is-hidden")) {
+            if ($("#query-text-box").hasClass("is-hidden") && $("#juso-search-btn").hasClass("is-hidden")) {
                 listing(order_type, page)
+            } else if ($("#query-text-box").hasClass("is-hidden")) {
+                search_by_address(order_type, page)
             } else {
                 searching(order_type, page)
             }
@@ -304,18 +284,20 @@
             });
         }
 
-        function search_by_address() {
+        function search_by_address(new_order, new_page) {
+            order = new_order
+            page = new_page
             let si = $("#si-select").val()
             let gu = $("#gu-select").val()
             let dong = $("#dong-select").val()
             $.ajax({
                 type: "GET",
-                url: `/search/address?si=${si}&gu=${gu}&dong=${dong}`,
+                url: `/search/address?si=${si}&gu=${gu}&dong=${dong}&order=${order}&page=${page}`,
                 data: {},
                 success: function (response) {
                     $("#card-box").empty();
                     let posts = response["posts"];
-                    // pagination(parseInt(response["last_page_num"]), page, "search")
+                    pagination(parseInt(response["last_page_num"]), page, "address")
                     for (let i = 0; i < posts.length; i++) {
                         make_post(posts[i], i);
                     }
@@ -370,7 +352,7 @@
         <select id="dong-select" onchange="$('#juso-search-btn').removeClass('is-hidden')">
         </select>
     </div>
-    <button class="button is-hidden" id="juso-search-btn" onclick="search_by_address()">검색</button>
+    <button class="button is-hidden" id="juso-search-btn" onclick="search_by_address(order,1)">검색</button>
 </section>
 <section>
     <a onclick="click_sort_btn('latest', 1)"><span class="tag is-medium">최신순</span></a>
@@ -380,13 +362,11 @@
 <section class="text-box is-hidden" id="query-text-box">
 </section>
 
-<div class="card-columns" style="margin-top: 30px;">
+<div class="card-columns" style="margin: 50px auto;">
     <div class="card-box" id="card-box"></div>
 </div>
 
-<nav class="pagination is-centered" role="navigation" aria-label="pagination" style="margin-top: 30px;">
-    <a class="pagination-previous" id="pre-btn" onclick="click_pre_btn()">Previous</a>
-    <a class="pagination-next" id="next-btn" onclick="click_next_btn()">Next page</a>
+<nav id="page-box" class="pagination is-centered" role="navigation" aria-label="pagination" style="margin-top: 30px;">
     <ul class="pagination-list" id="pagination-list"></ul>
 </nav>
 </body>
