--- a/templates/post.html
+++ b/templates/post.html
@@ -79,8 +79,8 @@
 
             var map = new kakao.maps.Map(mapContainer, mapOption);
 
-// 커스텀 오버레이에 표시할 내용입니다
-// HTML 문자열 또는 Dom Element 입니다
+            // 커스텀 오버레이에 표시할 내용입니다
+            // HTML 문자열 또는 Dom Element 입니다
             var content = '<div class="overlay_info">';
             content += '    <a href="https://place.map.kakao.com/17600274" target="_blank"><strong>월정리 해수욕장</strong></a>';
             content += '    <div class="desc">';
@@ -89,10 +89,10 @@
             content += '    </div>';
             content += '</div>';
 
-// 커스텀 오버레이가 표시될 위치입니다
+            // 커스텀 오버레이가 표시될 위치입니다
             var position = new kakao.maps.LatLng(33.55635, 126.795841);
 
-// 커스텀 오버레이를 생성합니다
+            // 커스텀 오버레이를 생성합니다
             var mapCustomOverlay = new kakao.maps.CustomOverlay({
                 position: position,
                 content: content,
@@ -100,14 +100,14 @@
                 yAnchor: 1.1 // 커스텀 오버레이의 y축 위치입니다. 1에 가까울수록 위쪽에 위치합니다. 기본값은 0.5 입니다
             });
 
-// 커스텀 오버레이를 지도에 표시합니다
+            // 커스텀 오버레이를 지도에 표시합니다
             mapCustomOverlay.setMap(map);
 
             var rvContainer = document.getElementById('roadview'); //로드뷰를 표시할 div
             var rv = new kakao.maps.Roadview(rvContainer); //로드뷰 객체
             var rvClient = new kakao.maps.RoadviewClient(); //좌표로부터 로드뷰 파노ID를 가져올 로드뷰 helper객체
 
-//지도의 중심좌표와 가까운 로드뷰의 panoId를 추출하여 로드뷰를 띄운다.
+            //지도의 중심좌표와 가까운 로드뷰의 panoId를 추출하여 로드뷰를 띄운다.
             rvClient.getNearestPanoId(mapCenter, 50, function (panoId) {
                 rv.setPanoId(panoId, mapCenter); //panoId와 중심좌표를 통해 로드뷰 실행
             });
@@ -156,7 +156,8 @@
         }
 
         function roadview() {
-
+            $('#map').toggleClass('is-hidden')
+            $('#roadview').toggleClass('is-hidden')
         }
 
         function myFunction() {
@@ -217,34 +218,36 @@
     </section>
     </section>
 
-<div class="search">
-    <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력">
-    <img class="search-img" onclick="search()"
-         src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
-</div>
-<div class="jumbo" >
-    <div class="container">
-        <img src="/static/post_pic/{{post.file}}" style="width : 600px; height: 600px;">
+    <div class="search">
+        <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력">
+        <img class="search-img" onclick="search()"
+             src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
     </div>
-</div>
-<div class="content">
-    <div class="user-info" id="user_information">
-        <img src = "/static/{{user.profile_pic_real}}" id = user_profile>
-        {% if user_info.nickname == user.nickname %}
-            <div class="menu dropdown" style="float: right">
-                <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()" style="float:right; margin: auto 20px 0px auto; "></i>
-                 <div id="myDropdown" class="dropdown-content">
-                    <a href="#">수정하기<i class="fa-solid fa-pencil" ></i></a>
-                    <a href="#">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
-                  </div>
-            </div>
-        {% endif %}
-        <h4 id="user_name">{{post.nickname}}</h4>
-        <h6 id="user_locate"> {{post.address}}</h6>
+    <div class="jumbo">
+        <div class="container">
+            <img src="/static/post_pic/{{ post.file }}" style="width : 600px; height: 600px;">
+        </div>
+    </div>
+    <div class="content">
+        <div class="user-info" id="user_information">
+            <img src="/static/{{ user.profile_pic_real }}" id=user_profile>
+            {% if user_info.nickname == user.nickname %}
+                <div class="menu dropdown" style="float: right">
+                    <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()"
+                       style="float:right; margin: auto 20px 0px auto; "></i>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">수정하기<i class="fa-solid fa-pencil"></i></a>
+                        <a href="#">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
+                    </div>
+                </div>
+            {% endif %}
+            <h4 id="user_name">{{ post.nickname }}</h4>
+            <h6 id="user_locate"> {{ post.address }}</h6>
 
-        <hr>
-        <div class="like-box">
-            <a class="heart-icon" id="heart_a" aria-label="like" onclick="toggle_like({{post.idx}})" style="float:right; margin: 40px 20px 0px 0px">
+            <hr>
+            <div class="like-box">
+                <a class="heart-icon" id="heart_a" aria-label="like" onclick="toggle_like({{ post.idx }})"
+                   style="float:right; margin: 40px 20px 0px 0px">
             <span class="icon is-small">
                 {% if post.like_by_me %}
                     <i id="heart" class="fa-solid fa-heart fa-3x" aria-hidden="true"></i>
@@ -252,23 +255,30 @@
                     <i id="heart" class="fa-regular fa-heart fa-3x" aria-hidden="true"></i>
                 {% endif %}
             </span>
-            </a>
-            <div class="like-num" id="heart-count-box"><script>num2str({{post.like_count}})</script></div>
+                </a>
+                <div class="like-num" id="heart-count-box">
+                    <script>num2str({{post.like_count}})</script>
+                </div>
+            </div>
+        </div>
+        <div class=content-name;>
+            <h1>{{ post.title }}</h1>
+            <h3>{{ post.price }}원 (1일 기준)</h3>
+        </div>
+
+        {#지도, 로드뷰 띄우기 #}
+        <div class="map" id="mapping">
+            <div id="map" class="local" style="width:400px;height:350px;"></div> <!-- 지도를 표시할 div 입니다 -->
+            <div id="roadview" class="road is-hidden" style="width:400px;height:350px;margin: 40px auto 40px auto"></div> <!-- 로드뷰를 표시할 div 입니다 -->
+        </div>
+        <button class="button is-info" style="display:block;margin:  auto" onclick="roadview()">로드뷰 보기</button>
+
+
+        <div class="content-info">
+            <p>상품 설명</p>
+            <h1> {{ post.content }}</h1>
         </div>
     </div>
-    <div class=content-name;>
-        <h1>{{ post.title }}</h1>
-        <h3>{{ post.price }}원 (1일 기준)</h3>
-    </div>
-    <div id="map">
-        <h1>지도 들어가요</h1>
-    </div>
-
-    <div class="content-info">
-        <p>상품 설명</p>
-        <h1> {{post.content}}</h1>
-    </div>
-</div>
 
     <div class="popup" id="frame" data-popup="popup-1" style="visibility:hidden; overflow-x:hidden;overflow-y:hidden">
         <iframe src="http://localhost:5000/posts/{{ post.idx }}/chat" width="300" height="468"></iframe>
