--- a/templates/post.html
+++ b/templates/post.html
@@ -82,9 +82,9 @@
             // 커스텀 오버레이에 표시할 내용입니다
             // HTML 문자열 또는 Dom Element 입니다
             var content = '<div class="overlay_info">';
-            content += '    <a href="https://place.map.kakao.com/17600274" target="_blank"><strong>월정리 해수욕장</strong></a>';
+            content += '    <a><strong>여기서 만나요!</strong></a>';
             content += '    <div class="desc">';
-            content += '        <img src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_thumb.png" alt="">';
+            content += '        <img src="/static/info_image.png" style="object-fit: fill" >';
             content += '        <span class="address">{{ post.address }}</span>';
             content += '    </div>';
             content += '</div>';
