--- a/templates/user.html
+++ b/templates/user.html
@@ -526,22 +526,22 @@
     </div>
     <div>
         <section class="tab-content">
-            <div class="card-columns" style="margin-top: 30px;">
+            <div class="card-columns" style="margin: 50px auto;">
                 <div class="card-box" id="card-box-post"></div>
             </div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin-top: 30px;">
+            <div class="card-columns" style="margin: 50px auto;">
                 <div class="card-box" id="card-box-comment"></div>
             </div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin-top: 30px;">
+            <div class="card-columns" style="margin: 50px auto;">
                 <div class="card-box" id="card-box-review"></div>
             </div>
         </section>
         <section class="tab-content">
-            <div class="card-columns" style="margin-top: 30px;">
+            <div class="card-columns" style="margin: 50px auto;">
                 <div class="card-box" id="card-box-like"></div>
             </div>
         </section>
