modify:지도 오버레이 수정

--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -48,3 +48,66 @@ textarea::placeholder {
     font-size: 17px;
     margin: 15px 0px 0px 5px;
 }
+/*지도 커스텀 오버레이 CSS*/
+.overlay_info {
+    border-radius: 6px;
+    margin-bottom: 10px;
+    float: left;
+    position: relative;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    background-color: #fff;
+}
+
+.overlay_info:nth-of-type(n) {
+    border: 0;
+    box-shadow: 0px 1px 2px #888;
+}
+
+.overlay_info a {
+    display: block;
+    background: #c886a4;
+    /*background: #d95050 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;*/
+    /*text-decoration: none;*/
+    color: #fff;
+    padding: 12px 25px 5px 20px;
+    font-size: 15px;
+    border-radius: 6px 6px 0 0
+}
+
+.overlay_info a strong {
+    /*background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/place_icon.png) no-repeat;*/
+    padding-left: 27px;
+}
+
+.overlay_info .desc {
+    padding: 8px 15px 15px;
+    position: relative;
+    min-width: 190px;
+    height: 60px
+}
+
+.overlay_info img {
+    vertical-align: top;
+}
+
+.overlay_info .address {
+    font-size: 12px;
+    color: #333;
+    position: absolute;
+    left: 80px;
+    right: 14px;
+    top: 5px;
+    white-space: normal
+}
+
+.overlay_info:after {
+    content: '';
+    position: absolute;
+    margin-left: -11px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png) no-repeat 0 bottom;
+}
