--- a/templates/user.html
+++ b/templates/user.html
@@ -157,7 +157,7 @@
         }
 
         function make_post(post, type) {
-            let temp_html = `<div class="col">
+            let temp_html = `<div class="col" style="cursor: pointer">
                                 <div class="card h-100" id="card-${post['idx']}">
                                     <!--사진 수정-->
                                     <img src="/static/post_pic/${post['file']}" class="card-img-top image" onclick="location.href='/posts/${post['idx']}'">
