--- a/templates/post.html
+++ b/templates/post.html
@@ -174,6 +174,26 @@
             }
         }
 
+         function deletePost() {
+            let result = confirm("정말로 삭제하시겠습니까?");
+            let idx_give = '{{ post.idx }}'
+            console.log(idx_give)
+            if(result) {
+                $.ajax({
+                    type: "POST",
+                    url: '/posts/delete',
+                    data:{idx : idx_give},
+                    success: function (response) { // 성공하면
+                        console.log('호출2')
+                        if (response["result"] == "success") {
+                            alert("삭제 되었습니다!");
+                            window.location.href = '/'
+                        }
+                    }
+                })
+            }
+        }
+
     </script>
 </head>
 <body>
@@ -231,7 +251,7 @@
                 <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()" style="float:right; margin: auto 20px 0px auto; "></i>
                  <div id="myDropdown" class="dropdown-content">
                     <a href="#">수정하기<i class="fa-solid fa-pencil" ></i></a>
-                    <a href="#">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
+                    <a href="javascript:deletePost()">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
                   </div>
             </div>
         {% endif %}
