--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
         }
 
         .hero-font {
-            /*color: #C886A4;*/
-            color: #543343;
+            color: #C886A4;
+            {#color: #543343;#}
             font-family: 'Noto Sans KR', sans-serif;
 
         }
