--- a/templates/user.html
+++ b/templates/user.html
@@ -44,9 +44,11 @@
             padding:16px;
         }
         .hero-font {
-            /*color: #C886A4;*/
-            color: #543343;
+            color: #C886A4;
             font-family: 'Noto Sans KR', sans-serif;
+            font-size: 2rem;
+            font-weight: 600;
+            line-height: 1.125;
         }
 
         #tabs-with-content .tabs:not(:last-child) {
@@ -347,7 +349,7 @@
 <section class="hero is-white">
 <div class="hero-body" onclick="window.location.href='/'" style='width: 300px; cursor:pointer;'>
         <img class="hero-img" src="/static/gogumacat.png">
-        <span class="title hero-font">
+        <span class="hero-font">
             고구마캣
         </span>
     </div>
