--- a/static/css/post.css
+++ b/static/css/post.css
@@ -20,8 +20,7 @@ body {
 }
 
 .hero-font {
-    /*color: #C886A4;*/
-    color: #543343;
+    color: #C886A4;
     font-family: 'Noto Sans KR', sans-serif;
 
 }
