--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -13,8 +13,7 @@ body {
 }
 
 .hero-font {
-    /*color: #C886A4;*/
-    color: #543343;
+    color: #C886A4;
     font-family: 'Noto Sans KR', sans-serif;
 
 }
