modify: 고구마캣 hero title 도현체로 수정 그리고 footer 추가

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -21,8 +21,7 @@ body {
 
 .hero-font {
     color: #C886A4;
-    font-family: 'Noto Sans KR', sans-serif;
-
+    font-family: 'Do Hyeon', sans-serif;
 }
 
 .float-right {
