--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 
     <!--지도 api-->
     <script type="text/javascript"
@@ -53,9 +53,7 @@
 
         .hero-font {
             color: #C886A4;
-            {#color: #543343;#}
-            font-family: 'Noto Sans KR', sans-serif;
-
+            font-family: 'Do Hyeon', sans-serif;
         }
 
         .float-right {
@@ -414,13 +412,12 @@
 <nav id="page-box" class="pagination is-centered" role="navigation" aria-label="pagination" style="margin-top: 30px;">
     <ul class="pagination-list" id="pagination-list"></ul>
 </nav>
-
-<footer id="footer">
-    <div style="margin-bottom: 10px"> <만든 사람들> </div>
-    <ul class="footer-list">승호</ul>
-    <ul class="footer-list">우남</ul>
-    <ul class="footer-list">호인</ul>
-    <ul class="footer-list">홍서</ul>
-</footer>
 </body>
+<footer class="footer" style="margin-top: 100px;">
+  <div class="content">
+    <p style="color: black;">
+      <strong>고구마캣</strong> by <a href="https://github.com/sparta-cloud-a3/gogumacat">승호, 우남, 호인, 홍서</a>
+    </p>
+  </div>
+</footer>
 </html>
