--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -14,8 +14,7 @@ body {
 
 .hero-font {
     color: #C886A4;
-    font-family: 'Noto Sans KR', sans-serif;
-
+    font-family: 'Do Hyeon', sans-serif;
 }
 
 .wrap {
