--- a/templates/post.html
+++ b/templates/post.html
@@ -210,6 +210,7 @@
             }
         }
 
+
     </script>
 </head>
 <body>
@@ -266,7 +267,7 @@
             <div class="menu dropdown" style="float: right">
                 <i class="fa-solid fa-ellipsis-vertical fa-2x dropbtn" onclick="myFunction()" style="float:right; margin: auto 20px 0px auto; "></i>
                  <div id="myDropdown" class="dropdown-content">
-                    <a href="#">수정하기<i class="fa-solid fa-pencil" ></i></a>
+                    <a href="http://localhost:5000/posting_update/{{ post.username }}/{{ post.idx }}">수정하기<i class="fa-solid fa-pencil" ></i></a>
                     <a href="javascript:deletePost()">삭제하기<i class="fa-solid fa-trash-can" style="color: red"></i></a>
                   </div>
             </div>
