--- a/templates/index.html
+++ b/templates/index.html
@@ -374,7 +374,8 @@
 </section>
 
 <div class="search">
-    <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력">
+    <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력"
+    onkeyup="if(window.event.keyCode==13){searching()}">
     <img class="search-img" onclick="searching('latest',1)"
          src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
 </div>
