--- a/templates/login.html
+++ b/templates/login.html
@@ -147,7 +147,8 @@
 
                                 <div class="field">
                                     <div class="control has-icons-left">
-                                        <input id="input-password" class="input" type="password" placeholder="비밀번호">
+                                        <input id="input-password" class="input" type="password" placeholder="비밀번호"
+                                        onkeyup="if(window.event.keyCode==13){sign_in()}">
                                         <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>
                                     </div>
                                     <p id="help-password" class="help is-hidden">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도
