--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -47,10 +47,50 @@
             $('#title').val('{{ post.title }}');
             $('#calender').val('{{ post.date}}');
             $('#price').val('{{ post.price }}');
-            $('#resume').val('{{ post.file }}');
             $('#content').val('{{ post.content }}');
             $('#local_address').val('{{ post.address }}');
+            file_name()
+            fileupload()
         })
+
+        function file_name() {
+            const fileName = document.querySelector('#file-js-example .file-name');
+            fileName.textContent = `{{ post.file }}`
+
+        }
+
+        //파일 업로드 시 제목 띄우기
+        function fileupload() {
+            const fileInput = document.querySelector('#file-js-example input[type=file]');
+
+            fileInput.onchange = () => {
+                if (fileInput.files.length > 0) {
+                    const fileName = document.querySelector('#file-js-example .file-name');
+                    fileName.textContent = fileInput.files[0].name;
+                }
+            }
+        }
+
+        // 이미지 업로드 및 업로드한 이미지 미리보기
+        function img_up() {
+            $('#img').on('change', function () {
+                ext = $(this).val().split('.').pop().toLowerCase(); //확장자
+                //배열에 추출한 확장자가 존재하는지 체크
+                if ($.inArray(ext, ['png', 'jpg', 'jpeg']) == -1) {
+                    alert("jpg,jpeg,png 이미지만 사용 가능합니다.")
+                    const fileName = document.querySelector('#file-js-example .file-name');
+                    fileName.textContent = "";//스팬 값 초기화
+                    $("#image_preview").toggleClass("is-hidden")
+                } else {
+                    file = $('#img').prop("files")[0];
+                    blobURL = window.URL.createObjectURL(file);
+                    $('#image_preview img').attr('src', blobURL);
+                    $('#image_preview').slideDown(); //업로드한 이미지 미리보기
+                    $(this).slideUp(); //파일 양식 감춤
+                    $("#image_preview").removeClass("is-hidden")
+                }
+            });
+        }
     </script>
 </head>
 <body>
@@ -92,8 +132,8 @@
         </label>
     </div>
     {#이미지 미리보기#}
-    <div id="image_preview" class="is-hidden">
-        <img style="width:300px;height: 200px">
+    <div id="image_preview">
+        <img style="width:300px;height: 200px" src="/static/post_pic/{{ post.file }}">
     </div>
     {#상세내용#}
     <textarea id="content" class="textarea" style="margin-top: 10px" placeholder="상세 내용을 적어주세요" rows="5"></textarea>
