--- a/templates/posting.html
+++ b/templates/posting.html
@@ -84,7 +84,7 @@
     </div>
     {#이미지 미리보기#}
     <div id="image_preview" class="is-hidden">
-        <img style="width:300px;height: 200px">
+        <img style="width:300px;height: 200px;margin-top: 10px">
     </div>
     {#상세내용#}
     <textarea id="content" class="textarea" style="margin-top: 10px" placeholder="상세 내용을 적어주세요" rows="5"></textarea>
