--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -133,7 +133,7 @@
     </div>
     {#이미지 미리보기#}
     <div id="image_preview">
-        <img style="width:300px;height: 200px" src="/static/post_pic/{{ post.file }}">
+        <img style="width:300px;height: 200px;margin-top: 10px" src="/static/post_pic/{{ post.file }}">
     </div>
     {#상세내용#}
     <textarea id="content" class="textarea" style="margin-top: 10px" placeholder="상세 내용을 적어주세요" rows="5"></textarea>
