--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>고구마캣</title>
+    <title>{{post.title}} | 고구마캣</title>
 
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/b8cc3ce1fa.js" crossorigin="anonymous"></script>
