--- a/templates/posting_update.html
+++ b/templates/posting_update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Webpage Title -->
-    <title>GOGUMACAT</title>
+    <title>수정 | 고구마캣</title>
 
 
     <!-- Required meta tags -->
