--- a/templates/user.html
+++ b/templates/user.html
@@ -515,13 +515,13 @@
                     <span>작성한 글</span>
                 </a>
             </li>
-            <li>
+            <li class="is-hidden">
                 <a>
                     <span class="icon is-small"><i class="fas fa-comment-dots"></i></span>
                     <span>작성한 댓글</span>
                 </a>
             </li>
-            <li>
+            <li class="is-hidden">
                 <a>
                     <span class="icon is-small"><i class="fas fa-face-smile-beam"></i></span>
                     <span>거래후기</span>
